Add text in title

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<div class="slides">
 				<section>
 					<h1><a href="https://jamstack.org/">JAMstack</a></h1>
-					<p>La arquitectura de la web moderna</p>
+					<p>La arquitectura de la web moderna No uses Wordpress</p>
 				</section>
 				<section>
 					<h3>Sobre mí</h3>
